--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "@angular/cdk": "^15.2.9",
     "@angular/common": "^15.2.10",
     "@angular/compiler": "^15.2.10",
-    "ngx-cookie-service": "15.0.0",
     "@angular/core": "^15.2.10",
     "@angular/forms": "^15.2.10",
     "@angular/google-maps": "^12.2.13",
@@ -47,6 +46,7 @@
     "@nebular/security": "11.0.1",
     "@nebular/theme": "11.0.1",
     "@swimlane/ngx-charts": "^14.0.0",
+    "@types/ws": "^8.5.13",
     "angular2-chartjs": "0.4.1",
     "bootstrap": "4.3.1",
     "chart.js": "2.7.1",
@@ -62,6 +62,7 @@
     "ng2-ckeditor": "~1.2.9",
     "ng2-completer": "^9.0.1",
     "ng2-smart-table": "^1.6.0",
+    "ngx-cookie-service": "15.0.0",
     "ngx-echarts": "^4.2.2",
     "node-sass": "^4.14.1",
     "normalize.css": "6.0.0",
@@ -93,7 +94,7 @@
     "@types/jasmine": "~3.3.0",
     "@types/jasminewd2": "2.0.3",
     "@types/leaflet": "1.2.3",
-    "@types/node": "^12.12.70",
+    "@types/node": "^22.10.7",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.43.0",
     "codelyzer": "^6.0.2",
